--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,11 @@
+# versi
 version: 2.1
 
 orbs:
   docker: circleci/docker@2.2.0
   go: circleci/go@1.7.3
 
+# melakukan unit test
 jobs:
   test-app:
     executor:
@@ -15,6 +17,7 @@ jobs:
         name: Run Unit Tests
         command: go test -v -short --count=1 $(go list ./...)
 
+  # build karsajobs ke github
   build-app-karsajobs:
     executor: docker/docker
     environment:
@@ -28,7 +31,7 @@ jobs:
     - run:
         name: Publish Docker Image to Github Container Registry
         command: |
-          echo "CR_PAT" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
+          echo "$CR_PAT" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
           docker push $IMAGE_NAME:latest
 
 workflows:
