--- a/backend/karsajobs-deployment.yml
+++ b/backend/karsajobs-deployment.yml
@@ -1,4 +1,4 @@
-#Versi API
+# Versi API
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -23,16 +23,20 @@ spec:
         ports:
         - containerPort: 8080
         env:
+        # APP_PORT dengan nilai “8080”
         - name: APP_PORT
           value: '8080'
         - name: MONGO_HOST
+          # MONGO_HOST dengan nilai yang diambil dari MongoDB Service  
           value: mongo-service
         - name: MONGO_USER
+          # MONGO_USER dengan nilai yang diambil dari MongoDB Secret
           valueFrom:
             secretKeyRef:
               name: mongo-credentials
               key: MONGO_ROOT_USERNAME
         - name: MONGO_PASS
+          # MONGO_PASS dengan nilai yang diambil dari MongoDB Secret 
           valueFrom:
             secretKeyRef:
               name: mongo-credentials
