--- a/mongodb/mongo-configmap.yml
+++ b/mongodb/mongo-configmap.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mongo-config
+# properti storage dengan key dbPath dan nilai /data/db
 data:
   mongo.conf: |
     storage:
