--- a/mongodb/mongo-secret.yml
+++ b/mongodb/mongo-secret.yml
@@ -4,5 +4,6 @@ metadata:
   name: mongo-credentials
 type: Opaque
 data:
+  # isi MONGO_ROOT_USERNAME dengan admin dan MONGO_ROOT_PASSWORD dengan supersecretpassword dalam bentuk base64
   MONGO_ROOT_USERNAME: YWRtaW4=
   MONGO_ROOT_PASSWORD: c3VwZXJzZWNyZXRwYXNzd29yZA==
