--- a/mongodb/mongo-service.yml
+++ b/mongodb/mongo-service.yml
@@ -1,4 +1,4 @@
-#create headless service mangodb will port 27017
+# membuat service mangodb dengan port 27017
 apiVersion: v1
 kind: Service
 metadata:
